--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://your-username.github.io/my-react-app",
   "name": "plant-nursery",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+     "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
