--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://your-username.github.io/my-react-app",
+  "homepage": "https://prakas4.github.io/Garden_Nursery",
   "name": "plant-nursery",
   "private": true,
   "version": "0.0.0",
